--- a/ctech405/module_5/form1/templates/result.html
+++ b/ctech405/module_5/form1/templates/result.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><title>Form demo</title></head>
+<head><title>Form output</title></head>
 <body>
     <p>You entered:</p>
     <ul>
