--- a/ctech405/module_5/form2/templates/result.html
+++ b/ctech405/module_5/form2/templates/result.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head><title>Form output</title></head>
 <body>
+    <p>Requested URL: <b>{{url}}</b></p>
     <p>You entered:</p>
     <ul>
       {% for k in fields.keys() %}
