--- a/ctech405/module_5/form3/templates/result.html
+++ b/ctech405/module_5/form3/templates/result.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head><title>Form output</title></head>
 <body>
+    <h1>{{form}}</h1>
     <p>Requested URL: <b>{{url}}</b></p>
     <p>You entered:</p>
     <ul>
