--- a/ctech405/module_6/story2/templates/clear.html
+++ b/ctech405/module_6/story2/templates/clear.html
@@ -4,7 +4,7 @@
 <title>My story editor</title>
 </head>
 <body>
-<i>No story yet! Why don't you type something?</i>
+<p><i>No story yet! Why don't you type something?</i></p>
 <br>
 {% include 'form.html' %}
 </body>
