--- a/ctech405/module_6/story1/templates/start.html
+++ b/ctech405/module_6/story1/templates/start.html
@@ -4,6 +4,8 @@
 <title>Story: start</title>
 </head>
 <body>
+<p><i>No story yet! Why don't you type something?</i></p>
+<br>
 <form action="add">
 	<input type="text" name="new-text" placeholder="Type the start of your story here">
 	<input type="submit" value="Go">
