--- a/ctech405/module_6/story2/templates/add.html
+++ b/ctech405/module_6/story2/templates/add.html
@@ -9,5 +9,8 @@
 {% endfor %}
 <br>
 {% include 'form.html' %}
+<form action="clear">
+  <input type="submit" value="Clear">
+</form>
 </body>
 </html>
