CTECH 405 edits to module 5

--- a/ctech405/module_5/form3/templates/form.html
+++ b/ctech405/module_5/form3/templates/form.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <form action="done1">
-	<input type="text" name="message">
+	<input type="text" name="form-one-message">
 	<input type="submit" value="Send 1">
 </form>
 <form action="done2">
-	<input type="text" name="bonus">
+	<input type="text" name="form-two-message">
 	<input type="submit" value="Send 2">
 </form>
 </body>
