CTECH 405 edits to first half of module 6

--- a/ctech405/module_6/app/templates/form.html
+++ b/ctech405/module_6/app/templates/form.html
@@ -6,7 +6,7 @@
 <body>
 <p>You entered <b>{{msg}}</b></p>
 <hr>
-<form action="done">
+<form action="/">
 	<input type="text" name="message">
 	<input type="submit" value="Send">
 </form>
