--- a/ctech405/module_6/story1/templates/start.html
+++ b/ctech405/module_6/story1/templates/start.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Story: start</title>
+<title>Tell me a story</title>
 </head>
 <body>
 <p><i>No story yet! Why don't you type something?</i></p>
 <br>
-<form action="add">
+<form action="add" method="POST">
 	<input type="text" name="new-text" placeholder="Type the start of your story here">
 	<input type="submit" value="Go">
 </form>
