--- a/ctech405/module_6/story2/templates/add.html
+++ b/ctech405/module_6/story2/templates/add.html
@@ -9,7 +9,7 @@
 {% endfor %}
 <br>
 {% include 'form.html' %}
-<form action="clear">
+<form action="clear" method="POST">
   <input type="submit" value="Clear">
 </form>
 </body>
