--- a/ctech405/module_6/story2/templates/form.html
+++ b/ctech405/module_6/story2/templates/form.html
@@ -1,4 +1,4 @@
-<form action="add">
+<form action="add" method="POST">
 	<input type="text" name="new-text" placeholder="Type the next part of your story here">
 	<input type="submit" value="Add">
 </form>
